[package]
name = "blittle"
version = "0.1.0"
edition = "2024"
description = "A fast little blitter"
authors = ["Esther Alter <subalterngames@gmail.com>"]
readme = "README.md"
repository = "https://github.com/subalterngames/blittle"
license-file = "LICENSE"
keywords = ["blitting", "image", "sprite", "gamedev", "graphics"]
categories = ["game-development", "graphics", "rendering"]

[dependencies]

[dev-dependencies]
blit = "0.8.5"
criterion = "0.7.0"
png = "0.18.0"
sdl2 = "0.38.0"

[[bench]]
name = "bench"
harness = false
